--- a/WEBSITE/frontend/src/index.css
+++ b/WEBSITE/frontend/src/index.css
@@ -6,6 +6,11 @@ body {
 /* @tailwind components; */
 /* @tailwind utilities; */
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -20,4 +25,3 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
